@startuml
enum role_enum {
  Admin
  Manager
  Worker
}

entity "users" as users {
  * user_id : int4 [PK, not null, auto increment]
  --
  username : varchar(50) [unique, not null]
  password_hash : varchar(200) [not null]
  role_name : role_enum [not null]
  first_name : varchar(50) [not null]
  second_name : varchar(50)
  birthday_date : date
  email : varchar(100) [unique, not null]
  confirmed : bool [default: false]
}

entity "projects" as projects {
  * project_id : int4 [PK, not null, auto increment]
  --
  project_name : varchar(100) [not null]
  description : text
  start_date : date [not null]
  end_date : date
  manager_id : int4 [not null]
}

entity "tasks" as tasks {
  * task_id : int4 [PK, not null, auto increment]
  --
  task_name : varchar(100) [not null]
  task_description : text
  deadline : date
  status : varchar(50) [default: 'Pending']
  project_id : int4 [not null]
  assigned_to : int4 [not null]
}

entity "events" as events {
  * event_id : int4 [PK, not null, auto increment]
  --
  event_name : varchar(100) [not null]
  event_description : text
  event_date : date [not null]
  requested_by : int4 [not null]
  approved_by : int4
}

entity "schedules" as schedules {
  * schedule_id : int4 [PK, not null, auto increment]
  --
  user_id : int4 [not null]
  event_id : int4
  project_id : int4
  schedule_date : date [not null]
  description : text
}

entity "reset_confirm_tokens" as reset_tokens {
  * token : varchar(36) [PK, not null]
  --
  user_id : int4
  expires_at_utc : timestamp [not null]
  used : bool [default: false]
}

users ||--o{ events : "approved_by"
users ||--o{ events : "requested_by"
users ||--o{ projects : "manager_id"
users ||--o{ reset_tokens : "user_id"
users ||--o{ schedules : "user_id"
users ||--o{ tasks : "assigned_to"

projects ||--o{ tasks : "project_id"
projects ||--o{ schedules : "project_id"

events ||--o{ schedules : "event_id"

@enduml